# simple-cpp-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: SourcesAndHeaders.cmake  StandardSettings.cmake  Utils.cmake
test/: CMakeLists.txt
test/src/: tmp_catch2_test.cpp  tmp_test.cpp
